--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Domain model for Doctrine (beauty-catalog project)",
     "require": {
         "doctrine/orm": "^2.5",
-	    "symfony/security": "2.8.2"
+	    "symfony/security": "2.8.2",
+        "nexode/specification": "1.0.0"
     }
 }
