--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
         "doctrine/orm": "^2.5",
 	    "symfony/security": "2.8.2",
         "nexode/specification": "1.0.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Vs\\": "src"
+        }
     }
 }
